--- a/style.css
+++ b/style.css
@@ -9,12 +9,10 @@ body{
     font-family: sans-serif;
 }
 
-.card{
-    box-shadow: 2px 2px 10px -2px rgba(0,0,0,0.3);
-}
+
 
 .overlay{
-    background-color: rgba(165, 0, 165, 0.534);
+    background-color: #eab20888;
 }
 
 .QRoverlay{
